--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
   "name": "vraiufo",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Vrai ou faux UFO ?",
-  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "test",
     "start": "node --experimental-modules server.js"
   },
   "dependencies": {
-    "squirrelly": "^8.0.1",
-    "fastify": "^2.14.1",
-    "fastify-accepts": "^1.0.0",
-    "fastify-caching": "^5.0.0",
-    "fastify-static": "^2.7.0",
-    "pg": "^8.2.1"
+    "@javarome/testscript": "^0.10.7"
   },
   "keywords": [
     "ufo",
