--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "vraiufo",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Vrai ou faux UFO ?",
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "npm run test && vite build",
     "test": "node --test"
+  },
+  "dependencies": {
+    "@rr0/case": "^0.1.3"
+  },
+  "devDependencies": {
+    "vite": "^6.3.5"
   },
   "keywords": [
     "ufo",
